# auth_service

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 5312f7c11cc1_init.py  b58b16317989_create_users_table.py
src/auth_service/application/: __init__.py  jwt_service.py
src/auth_service/application/dto/: __init__.py  token.py  user.py
src/auth_service/application/exceptions/: __init__.py  auth.py
src/auth_service/application/use_cases/: __init__.py
src/auth_service/domain/: __init__.py  user.py
src/auth_service/domain/events/: __init__.py  base.py  user.py
src/auth_service/domain/exceptions/: __init__.py  base_domain.py  login.py  password.py  token.py  user.py
src/auth_service/domain/models/: __init__.py  refresh_token.py  user.py
src/auth_service/domain/ports/: __init__.py  event_publisher.py  jwt_provider.py  password_hasher.py  token_repository.py  transaction_manager.py  user_repository.py
src/auth_service/domain/services/: token_service.py
src/auth_service/domain/value_objects/: __init__.py  user_login.py  user_password.py
src/auth_service/infra/: __init__.py  database.py  postgres_config.py
src/auth_service/infra/config/: __init__.py  postgres_settings.py  pyjwt_settings.py  rmq_settings.py  settings.py
src/auth_service/infra/di/: __init__.py  container.py
src/auth_service/infra/messaging/: __init__.py  broker.py  event_publisher.py
src/auth_service/infra/models/: user.py
src/auth_service/infra/persistence/: __init__.py  alembic.ini  database.py  transaction_manager.py
src/auth_service/infra/security/: __init__.py  jwt_provider.py  password_hasher.py
src/auth_service/presentation/: __init__.py  exception_handlers.py  main.py  schemas.py
src/auth_service/presentation /: router.py
src/auth_service/presentation/routes/: __init__.py  auth.py  (+1 more)
tests/unit_tests/application/: dto_test.py  exceptions_test.py  processors_test.py
tests/unit_tests/domain/: __init__.py  events_test.py  exceptions_test.py  models_test.py  services_test.py  value_objects_test.py
tests/unit_tests/infra/: messaging_test.py  security_test.py
(+35 files in other folders)
