[project]
name = "auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.45",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.6.0",
    "alembic>=1.18.0",
    "bcrypt>=5.0.0",
    "pyjwt>=2.9.0",
    "faststream[rabbit]>=0.6.5",
    "dishka>=1.7.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["uv_build>=0.9.23,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "*_tests.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
